fix title overlapby changing 0.6rem -> 0.2rem padding

--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ button {
 
 .navbar {
   background-color: #1f70c1;
-  padding: 0.6rem;
+  padding: 0.2rem;
   width: 100%;
   position: fixed;
   z-index: 2;
